(library
  (name bumper_tests)
  (modules bumper_tests)
  (libraries
    grid
    bumper
    ounit2
    core))

(library
  (name tunnel_tests)
  (modules tunnel_tests)
  (libraries
    grid
    tunnel
    ounit2
    core))

(library
  (name teleporter_tests)
  (modules teleporter_tests)
  (libraries
    grid
    teleporter
    ounit2
    core))

(test
  (name pinball_tests)
  (modules pinball_tests)
  (libraries
    core
    ounit2
    activated_bumper
    bumper
    grid_cell
    grid
    teleporter
    tunnel
    bumper_tests
    tunnel_tests
    teleporter_tests
  )
  )