(library
  (name bumper_tests)
  (modules bumper_tests)
  (libraries
    grid
    bumper
    ounit2
    core))

(library
  (name tunnel_tests)
  (modules tunnel_tests)
  (libraries
    grid
    tunnel
    ounit2
    core))

(library
  (name teleporter_tests)
  (modules teleporter_tests)
  (libraries
    grid
    teleporter
    ounit2
    core))

(library
  (name activated_bumper_tests)
  (modules activated_bumper_tests)
  (libraries
    grid
    activated_bumper
    tunnel
    ounit2
    core))

(library
  (name directional_bumper_tests)
  (modules directional_bumper_tests)
  (libraries
    grid
    directional_bumper
    tunnel
    ounit2
    core))

(library
  (name grid_cell_tests)
  (modules grid_cell_tests)
  (libraries
    grid
    grid_cell
    ounit2
    core))

(library
  (name grid_tests)
  (modules grid_tests)
  (libraries
    grid
    grid_cell
    ounit2
    core))

(test
  (name pinball_tests)
  (modules pinball_tests)
  (libraries
    core
    ounit2
    activated_bumper
    directional_bumper
    bumper
    grid_cell
    grid
    teleporter
    tunnel
    bumper_tests
    tunnel_tests
    teleporter_tests
    activated_bumper_tests
    directional_bumper_tests
    grid_cell_tests
    grid_tests)
  (preprocess (pps ppx_jane))
  )