(library
  (name bumper)
  (modules
    bumper)
  (libraries core)
  (preprocess
    (pps ppx_jane bisect_ppx)))

(library
  (name tunnel)
  (modules
    tunnel)
  (libraries core)
  (preprocess
    (pps ppx_jane bisect_ppx)))

(library
  (name teleporter)
  (modules
    teleporter)
  (libraries core)
  (preprocess
    (pps ppx_jane bisect_ppx)))

(library
  (name activated_bumper)
  (modules
    activated_bumper)
  (libraries core)
  (preprocess
    (pps ppx_jane bisect_ppx)))

(library
  (name grid_cell)
  (modules
    grid_cell)
  (libraries core bumper tunnel teleporter activated_bumper)
  (preprocess
    (pps ppx_jane bisect_ppx)))

(library
  (name grid)
  (modules grid)
  (libraries 
    core
    grid_cell)
  (preprocess
    (pps ppx_jane bisect_ppx)))

